--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,12 @@ body{
   display:flex;
   flex-direction: row;
 }
+
+
+.phase-radio-container {
+  width: 100%;
+  height: 100%;
+}
 .phase-row{
   width: 100%;
   height: 35px;
@@ -45,7 +51,9 @@ body{
   flex-direction: row;
   justify-content: space-between;
 }
-.phase-button {
+
+
+ .phase-button {
   display:flex;
   justify-content: center;
   align-items: center;
@@ -61,8 +69,9 @@ body{
   -khtml-user-select: none;
   -webkit-user-select: none;
   -o-user-select: none;
+  cursor:pointer;
 }
-.phase-button.clicked{
+.phase-button .checked{
   background-color: yellow;
   color: black;
   display:flex;
@@ -74,3 +83,27 @@ body{
   font-weight: bolder;
   border: 1px solid yellow;
 }
+
+.phase-radio-container input[type=radio]:checked + .phase-radio{
+  background-color: red;
+} 
+
+
+
+
+/* .phase-button .phase-radio {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+} 
+
+ .phase-button input[type=radio] {
+  display: none;
+}  
+
+
+ 
+.phase-button input[type=radio]:checked {
+  background-color:yellow;
+}   */
+
