--- a/src/index.css
+++ b/src/index.css
@@ -27,17 +27,6 @@ body{
   align-items: center;
   justify-content: center;
 }
-.class-button{
-  height:56px;
-  width: 56px;
-  background-color: grey;
-  margin: 0 5px 5px 0;
-}
-
-.class-row {
-  display:flex;
-  flex-direction: row;
-}
 
 
 .phase-radio-container {
@@ -51,7 +40,6 @@ body{
   flex-direction: row;
   justify-content: space-between;
 }
-
 
 
 
@@ -91,56 +79,29 @@ body{
   border: 1px solid yellow;
 }
 
-
- /* .phase-button {
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  font-weight: bolder;
-  background-color:black;
-  color: yellow;
-  border: 1px solid yellow;
-  user-select: none;
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -o-user-select: none;
-  cursor:pointer;
+.class-button{
+  height:64px;
+  width: 64px;
+  margin: 0 5px 5px 0;
 }
 
-.phase-row .radios input[type=radio]:checked + .radio{
-  background-color: yellow;
-  color: black;
+.class-icon{
+  height: 100%;
+  width: 100%;
+}
+
+.class-row-radios {
   display:flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  font-weight: bolder;
-  border: 1px solid yellow;
-} */
+  flex-direction: row;
+}
 
-
-
-
-
-/* .phase-button .phase-radio {
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-} 
-
- .phase-button input[type=radio] {
-  display: none;
-}  
-
-
+.class-row-radios input[type=radio]{
+  display:none
+}
  
-.phase-button input[type=radio]:checked {
-  background-color:yellow;
-}   */
+
+.class-row-radios input[type=radio]:checked + .class-button {
+  border: 1px solid orange;
+}
+
 
