--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,8 @@ body{
  
 
 .class-row-radios input[type=radio]:checked + .class-button {
-  border: 1px solid orange;
+  border: 2px solid orange;
+  border-radius: 10%;
 }
 
 
